--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -6,3 +6,36 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.allStudentsView {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+
+.addStudentForm {
+  width: 500px;
+  margin: 50px auto 50px auto;
+  text-align: center;
+  padding: 50px;
+  background-color: lightblue;
+  border-radius: 25px;
+}
+
+.addStudentForm input {
+  text-align: center;
+  border-radius: 3px;
+  background-color: #dadada;
+}
+
+.addStudentForm .dropdown-toggle,
+.addStudentForm .dropdown-item {
+  width: 400px;
+  text-align: center;
+}
+
+.addStudentForm input[type="submit"] {
+  background-color: lightgreen;
+}
