--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -41,6 +41,7 @@
   background-color: #dadada;
   border: 1px solid black;
   color: black;
+  margin: 5px auto;
 }
 
 .addStudentForm .dropdown-toggle,
