--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -23,7 +23,7 @@
 }
 
 .addStudentForm {
-  width: 500px;
+  width: 600px;
   margin: 50px auto;
   text-align: center;
   padding: 50px;
@@ -44,9 +44,16 @@
   margin: 5px auto;
 }
 
+.addStudentForm .dropdown {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0;
+  margin: 0;
+}
+
 .addStudentForm .dropdown-toggle,
 .addStudentForm .dropdown-item {
-  width: 400px;
+  width: 498px;
   padding: 5px;
   text-align: center;
 }
