--- a/client/src/components/campuses/SingleCampus.css
+++ b/client/src/components/campuses/SingleCampus.css
@@ -1,16 +1,24 @@
-.description{
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.description {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.title {
+  text-align: center;
 }
-.first{
-    text-align: center;
+
+.name {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.first {
+  text-align: center;
 }
 
 .wrapper {
