--- a/client/src/components/campuses/SingleCampus.css
+++ b/client/src/components/campuses/SingleCampus.css
@@ -1,15 +1,16 @@
-.description {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 .title {
   text-align: center;
 }
 
 .name {
   text-align: center;
+}
+
+.description {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 img {
@@ -20,7 +21,12 @@ img {
 .first {
   text-align: center;
 }
-
+.address {
+  text-align: center;
+}
+.buttons {
+  text-align: center;
+}
 .wrapper {
   width: 100%;
   height: 50px;
