When there are no students, a message will appear

--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -104,6 +104,10 @@
   transform: scale(2.5);
 }
 
+.allStudents .noStudentsFound {
+  text-align: center;
+}
+
 /******************/
 /* SINGLE STUDENT */
 /******************/
