Fixed issue where the button was still displaying box-shadow around it even after being deleted

--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -104,6 +104,11 @@
   transform: scale(2.5);
 }
 
+.allStudents .studentDeleteBtn:focus {
+  background-color: transparent;
+  box-shadow: none;
+}
+
 .allStudents .noStudentsFound {
   text-align: center;
 }
