Modified background color of student image box to match default image

--- a/client/src/components/students/AllStudents.css
+++ b/client/src/components/students/AllStudents.css
@@ -91,7 +91,7 @@
 .allStudents .studentImage {
   height: 494px;
   width: 100%;
-  background-color: lightskyblue;
+  background-color: #c4ccdf;
 }
 
 .allStudents .studentDeleteBtn {
